@@ -7,6 +7,7 @@
 	* Galloping duration depends on riding skills (idea by Beolach, code by Pasi Kallinen)
 	* Removed the Quest turn limit
 	* Player vampire gets a charisma bonus when wearing an opera cloak (by L)
+	* Some monster vampires get an opera cloak (from Slash'Em)
 	
 	* New config option for customizing monster letter in UTF8graphics:
 	  MONSTERSYMBOL='horse':U+0127 # latin small letter h with stroke
